hphp/hack/test/typecheck/ppl/other_ppl_static_call.php.exp
File "other_ppl_static_call.php", line 12, characters 5-6:
Cannot call a method on an object of a <<__PPL>> class inside a <<__PPL>> class unless using $this-> or $this:: syntax (Typing[4264])
